--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         <div class="container px-5 py-24 mx-auto flex">
           <div class="lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10 shadow-md">
             <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Feedback</h2>
-            <p class="leading-relaxed mb-5 text-gray-600">Post-ironic portland shabby chic echo park, banjo fashion axe</p>
+            <p class="leading-relaxed mb-5 text-gray-600">Post-ironic portland shabby chic echo park</p>
             <div class="relative mb-4">
               <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
               <input type="email" id="email" name="email" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
